--- a/style.css
+++ b/style.css
@@ -12,3 +12,8 @@ h1 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-style: italic;
 }
+
+
+
+
+/* Simplemento hemos creado un estilo para el html */
